load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "client_v2.go",
    ],
    importpath = "github.com/CloudZou/punk/pkg/conf",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/conf/env:go_default_library",
        "//pkg/ecode:go_default_library",
        "//pkg/log:go_default_library",
    ],
)
