load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["redis.go"],
    importpath = "github.com/CloudZou/punk/pkg/gredis",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/gomodule/redigo/redis:go_default_library"],
)
