load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "dsn.go",
        "field.go",
        "file.go",
        "handler.go",
        "level.go",
        "log.go",
        "logrus.go",
        "pattern.go",
        "stdout.go",
        "util.go",
        "verbose.go",
    ],
    importpath = "github.com/CloudZou/punk/pkg/log",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/conf/env:go_default_library",
        "//pkg/log/internal/core:go_default_library",
        "//pkg/log/internal/filewriter:go_default_library",
        "//pkg/net/metadata:go_default_library",
        "//pkg/net/trace:go_default_library",
        "//pkg/stat/metric:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "log_test.go",
        "pattern_test.go",
        "util_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/net/metadata:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)
