load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["str.go"],
    importpath = "github.com/CloudZou/punk/pkg/str",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["str_test.go"],
    embed = [":go_default_library"],
)
