load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["xstr.go"],
    importpath = "github.com/CloudZou/punk/pkg/xstr",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["xstr_test.go"],
    embed = [":go_default_library"],
)
