load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "header_template.go",
        "main.go",
        "multi_template.go",
        "none_template.go",
        "single_template.go",
    ],
    importpath = "github.com/CloudZou/punk/tool/punk-gen-bts",
    visibility = ["//visibility:private"],
    deps = ["//tool/pkg:go_default_library"],
)

go_binary(
    name = "punk-gen-bts",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
