load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "main-packr.go",
        "new.go",
        "project.go",
    ],
    importpath = "github.com/CloudZou/punk/tool/punk-gen-project",
    visibility = ["//visibility:private"],
    deps = [
        "//tool/pkg:go_default_library",
        "//tool/punk-gen-project/packrd:go_default_library",
        "//vendor/github.com/gobuffalo/packr/v2:go_default_library",
        "//vendor/github.com/urfave/cli/v2:go_default_library",
    ],
)

go_binary(
    name = "punk-gen-project",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
