load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "build.go",
        "env.go",
        "main.go",
        "run.go",
        "tool.go",
        "tool_index.go",
        "version.go",
    ],
    importpath = "github.com/CloudZou/punk/tool/punk",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/github.com/fatih/color:go_default_library",
        "//vendor/github.com/urfave/cli/v2:go_default_library",
    ],
)

go_binary(
    name = "punk",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
