load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["env.go"],
    importpath = "github.com/CloudZou/punk/pkg/conf/env",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["env_test.go"],
    embed = [":go_default_library"],
)
