load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["zookeeper.go"],
    importpath = "github.com/CloudZou/punk/pkg/naming/zookeeper",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/log:go_default_library",
        "//pkg/naming:go_default_library",
        "//pkg/time:go_default_library",
        "//vendor/github.com/go-zookeeper/zk:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["zookeeper_test.go"],
    embed = [":go_default_library"],
    deps = ["//pkg/naming:go_default_library"],
)
