load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "databus.go",
        "databus.pb.go",
    ],
    importpath = "github.com/CloudZou/punk/pkg/queue/databus",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cache/redis:go_default_library",
        "//pkg/conf/env:go_default_library",
        "//pkg/container/pool:go_default_library",
        "//pkg/log:go_default_library",
        "//pkg/naming:go_default_library",
        "//pkg/naming/discovery:go_default_library",
        "//pkg/net/netutil:go_default_library",
        "//pkg/net/trace:go_default_library",
        "//pkg/stat/prom:go_default_library",
        "//pkg/time:go_default_library",
        "//vendor/github.com/gogo/protobuf/gogoproto:go_default_library",
        "//vendor/github.com/gogo/protobuf/proto:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["databus_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/naming/discovery:go_default_library",
        "//pkg/time:go_default_library",
    ],
)
