load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "errgroup.go",
    ],
    importpath = "github.com/CloudZou/punk/pkg/sync/errgroup",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "errgroup_test.go",
        "example_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["//vendor/golang.org/x/net/context:go_default_library"],
)
